[metadata]
license = MIT
lincense_file=LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating system :: OS independent

[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.17
python_requires=>=3.7

[options.extra_requires]
testing=
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
IPYNBrenderer = py.typed

[flake8]
max-line-length = 160
exclude=__init__.py